QR-3 ScanFragment 디자인 완성

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -8,5 +8,6 @@
     <fragment
         android:id="@+id/scanFragment"
         android:name="com.taetae98.qrreader.ScanFragment"
+        android:label="@string/scan"
         tools:layout="@layout/fragment_scan" />
 </navigation>
