--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <color name="colorPrimary">#1C68FA</color>
+    <color name="colorPrimaryVariant">#4A86FE</color>
+    <color name="colorOnPrimary">#F7F7F7</color>
+
+    <color name="colorSecondary">#3D3D3D</color>
+    <color name="colorSecondaryVariant">#DFDFDF</color>
+    <color name="colorOnSecondary">#FFFFFF</color>
 </resources>
