--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/scanFragment"
-        android:name="com.taetae98.qrreader.ScanFragment"
+        android:name="com.taetae98.qrreader.fragment.ScanFragment"
         android:label="@string/scan"
         tools:layout="@layout/fragment_scan" />
 </navigation>
