--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -10,4 +10,9 @@
         android:name="com.taetae98.qrreader.fragment.ScanFragment"
         android:label="@string/scan"
         tools:layout="@layout/fragment_scan" />
+    <fragment
+        android:id="@+id/generateFragment"
+        android:name="com.taetae98.qrreader.fragment.GenerateFragment"
+        android:label="@string/generate"
+        tools:layout="@layout/fragment_generate"/>
 </navigation>
