--- a/app/src/main/res/layout/fragment_internet.xml
+++ b/app/src/main/res/layout/fragment_internet.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.taetae98.qrreader.viewmodel.CodeViewModel" />
+            type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />
 
         <variable
             name="internetViewModel"
