--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.taetae98.qrreader.viewmodel.CodeViewModel" />
+            type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />
 
         <variable
             name="onScan"
