QR-12 WiFi Fragment 기능추가

--- a/app/src/main/res/layout/fragment_internet.xml
+++ b/app/src/main/res/layout/fragment_internet.xml
@@ -34,8 +34,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/protocol_input_layout">
                 <com.google.android.material.textfield.TextInputEditText
+                    android:inputType="text"
                     android:text="@={internetViewModel.address}"
-                    android:maxLines="10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
