--- a/app/src/main/res/layout/fragment_code.xml
+++ b/app/src/main/res/layout/fragment_code.xml
@@ -34,8 +34,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/format_input_layout">
                 <com.google.android.material.textfield.TextInputEditText
+                    android:inputType="textMultiLine"
+                    android:maxLines="@integer/max_line"
                     android:text="@={codeViewModel.code}"
-                    android:maxLines="10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
