--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -14,16 +14,33 @@
         <variable
             name="locationViewModel"
             type="com.taetae98.qrreader.viewmodel.LocationViewModel" />
+
+        <variable
+            name="onRefesh"
+            type="android.view.View.OnClickListener" />
+
+        <variable
+            name="onMapFloatingActionButton"
+            type="android.view.View.OnClickListener" />
+
+        <variable
+            name="onLocation"
+            type="android.view.View.OnClickListener" />
+
+        <variable
+            name="opened"
+            type="Boolean" />
     </data>
 
-    <ScrollView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/layout"
         android:background="?attr/colorOnPrimary"
-        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Theme.QRReader.TextInputLayout.FilledBox"
@@ -49,6 +66,7 @@
                 android:hint="@string/longitude"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
                 app:layout_constraintTop_toBottomOf="@id/latitude_input_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
@@ -71,7 +89,44 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:onClick="@{onMapFloatingActionButton}"
+            android:id="@+id/map_floating_action_button"
+            android:src="@drawable/ic_round_map_24"
+            app:floatingVisible="@{opened}"
+            android:contentDescription="@string/map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/floating_action_button_margin"
+            android:layout_marginBottom="140dp"
+            app:layout_anchor="@id/my_location_floating_action_button"
+            app:layout_anchorGravity="end|top" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/my_location_floating_action_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/floating_action_button_margin"
+            android:layout_marginBottom="80dp"
+            android:contentDescription="@string/my_location"
+            android:onClick="@{onLocation}"
+            android:src="@drawable/ic_round_my_location_24"
+            app:floatingVisible="@{opened}"
+            app:layout_anchor="@id/refresh_button"
+            app:layout_anchorGravity="end" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/refresh_button"
+            android:onClick="@{onRefesh}"
+            android:src="@{opened ? @drawable/ic_round_close_24 : @drawable/ic_round_refresh_24}"
+            android:contentDescription="@{opened ? @string/close : @string/refresh}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/floating_action_button_margin"
+            app:layout_anchor="@id/content_layout"
+            app:layout_anchorGravity="bottom|end"
+            tools:src="@drawable/ic_round_close_24"/>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
