--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -74,7 +74,7 @@
                     android:contentDescription="@string/scan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="25dp"
+                    android:layout_margin="@dimen/floating_action_button_margin"
                     app:backgroundTint="?attr/colorPrimary"
                     app:layout_constraintVertical_bias="1"
                     app:layout_constraintHorizontal_bias="1"
