--- a/app/src/main/res/layout/fragment_tel.xml
+++ b/app/src/main/res/layout/fragment_tel.xml
@@ -1,17 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />
 
+        <variable
+            name="telViewModel"
+            type="com.taetae98.qrreader.viewmodel.TelViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="?attr/colorOnPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:text="Internet"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Theme.QRReader.TextInputLayout.FilledBox"
+            android:id="@+id/tel_input_layout"
+            android:hint="@string/tel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:endIconMode="clear_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <com.google.android.material.textfield.TextInputEditText
+                android:inputType="phone"
+                android:text="@={telViewModel.tel}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.taetae98.qrreader.view.BarcodeView
+            android:id="@+id/barcode_view"
+            app:barcode="@{viewModel.barcode}"
+            app:format="@{viewModel.format}"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_margin="50dp"
+            app:cardBackgroundColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/tel_input_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
